setup postgres database - add migrations to generate the structure

--- a/.env
+++ b/.env
@@ -1,3 +1,13 @@
 SERVER_PORT=3000
 DATABASE_MIGRATIONS=false
 DATABASE_NAME=go-toggl.sqlite
+
+# Postgres
+DB_DRIVER=postgres
+DB_HOST=localhost
+DB_PASSWORD=go-toggl
+DB_USER=go-toggl
+DB_NAME=go-toggl
+DB_PORT=5432
+DATABASE_URI=postgres://go-toggl:go-toggl@localhost:5432/go-toggl?&sslmode=disable
+DATABASE_MIGRATIONS=false
