setup JWT authentication to endpoints

--- a/.env
+++ b/.env
@@ -11,3 +11,6 @@ DB_NAME=go-toggl
 DB_PORT=5432
 DATABASE_URI=postgres://go-toggl:go-toggl@localhost:5432/go-toggl?&sslmode=disable
 DATABASE_MIGRATIONS=false
+
+# JWT
+JWT_SIGNING_STRING=go-toggl-jrmanes
